# swift-zephyr-rfid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  custom_linker.ld  prj.conf  program.sh  sections.ld  west.yml
boards/: adafruit_feather_nrf52840.overlay
src/: BLE.swift  BridgingHeader.h  CounterTimer.swift  Led.swift  MFRC522.c  MFRC522.h  MFRC522.swift  Main.swift  Stubs.c
